# SEO-HTML

./: .flake8  README.md  mypy.ini  pyproject.toml  pytest.ini
data/: property_1_data.json  property_1_listing.html  property_2_data.json  property_2_listing.html
src/: app.py  main.py  real_estate_app.py
src/agents/: call_to_action_agent.py  description_agent.py  h1_agent.py  key_features_agent.py  meta_description_agent.py  neighborhood_agent.py  title_agent.py
src/agents/content_generation/: call_to_action_agent.py  description_agent.py  h1_agent.py  key_features_agent.py  meta_description_agent.py  neighborhood_agent.py  title_agent.py
src/agents/evaluation/: fact_checker_agent.py  improvement_suggestion_agent.py  language_evaluator_agent.py  tone_evaluator_agent.py
src/config/: options.py
src/core/: call_to_action_generator.py  description_generator.py  h1_generator.py  html_generator.py  key_features_generator.py  meta_description_generator.py  neighborhood_generator.py  title_generator.py
src/evaluate/: base_evaluator.py  complete_evaluator.py  fact.py  language.py  seo.py
src/models/: base_language_model.py  call.py  ollama_model.py
tests/: __init__.py  test_evaluators.py  test_html_generator.py  test_ollama.py  test_title_agent.py
